# pr-webbook

./: .buildinfo  LICENSE  README.md  intro.html  prf-prf.html  pyproject.toml
_sources/: Chapter04Section03.ipynb  Chapter05Section03.ipynb  Chapter12Section02.ipynb  Chapter14Section01.ipynb  Chapter16Section02.ipynb  Chapter16Section04.ipynb  TestCodeRunnerSection.ipynb  intro.md
docs/: _config.yml
docs/_build/.doctrees/: Chapter01.doctree  Chapter01Section01.doctree  Chapter01Section02.doctree  Chapter01Section03.doctree  Chapter01Section04.doctree  Chapter01Section05.doctree  Chapter01Section06.doctree  Chapter02.doctree  Chapter02Section01.doctree  Chapter02Section02.doctree  Chapter02Section03.doctree  Chapter02Section04.doctree  Chapter02Section05.doctree  Chapter02Section06.doctree  Chapter02Section07.doctree  Chapter03.doctree  Chapter03Section01.doctree  Chapter03Section02.doctree  Chapter04.doctree  Chapter04Section01.doctree  Chapter04Section02.doctree  Chapter04Section03.doctree  Chapter04Section04.doctree  Chapter04Section05.doctree  Chapter04Section06.doctree  Chapter05.doctree  Chapter05Section01.doctree  Chapter05Section02.doctree  Chapter05Section03.doctree  Chapter05Section04.doctree  Chapter06.doctree  Chapter06Section01.doctree  Chapter06Section02.doctree  Chapter06Section03.doctree  Chapter06Section04.doctree  Chapter06Section05.doctree  Chapter06Section06.doctree  Chapter06Section07.doctree  Chapter06Section08.doctree  Chapter07.doctree  (+115 more)
docs/_build/html/: .buildinfo  intro.html  prf-prf.html  searchindex.js
(+8 files in other folders)
