[project]
name = "Stas-book"
version = "0.0.1"
description = "Probability Theory and Mathematical Statistics Web-book"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "ghp-import>=2.1.0",
    "matplotlib>=3.10.3",
    "jupyter-book==1.0.4",
    "sphinx_proof",
    "scipy",
    "pandas",
    "numpy",
    "plotly",
]
